<resources>
    <string name="app_name">Академия Экспресс</string>
    <string name="login_string">Уже есть аккаунт? <u>Войти</u></string>
    <string name="other_string"><u>Выбрать другой адрес</u></string>
    <string name="polz_str"><u>Пользовательское соглашение</u></string>
    <string name="rek_str"><u>Реквизиты</u></string>
    <string name="facebook_app_id">1589858481338379</string>
    <string name="january_string">января</string>
    <string name="febuary_string">февраля</string>
    <string name="march_string">марта</string>
    <string name="april_string">апреля</string>
    <string name="may_string">мая</string>
    <string name="june_string">июня</string>
    <string name="july_string">июля</string>
    <string name="august_string">августа</string>
    <string name="september_string">сентября</string>
    <string name="octoboer_string">октября</string>
    <string name="november_string">ноября</string>
    <string name="december_string">декабря</string>
    <string name="lost_connection_str">Потеряно соединение с интернетом</string>
    <string name="loca_error">Невозможно получить доступ к Вашему местоположению</string>
    <string name="name_error">Поле имени не заполнено.</string>
    <string name="lastname_error">Поле фамилии не заполнено.</string>
    <string name="email_error">Неверный email.</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="e_mail">E-mail</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="quit_profile">ВЫЙТИ ИЗ ПРОФИЛЯ</string>
    <string name="wrong_phone_format">Неверный формат номера</string>
    <string name="type_phone">Для заказа введите свой телефон</string>
    <string name="next_upcase">ДАЛЕЕ</string>
    <string name="phone_upcase">ТЕЛЕФОН</string>
    <string name="orders_upcase">ЗАКАЗЫ</string>
    <string name="event_sign_in">Вход в приложение</string>
    <string name="monday_code">в понедельник</string>
    <string name="tuesday_code">во вторник</string>
    <string name="wednesday_code">в среду</string>
    <string name="thursday_code">в четверг</string>
    <string name="friday_code">в пятницу</string>
    <string name="saturday_code">в субботу</string>
    <string name="sunday_code">в воскресенье</string>
    <string name="today_code">сегодня</string>
    <string name="now_closed_str">Сейчас мы закрыты.</string>
    <string name="now_closed_valid">"Сейчас мы закрыты. Мы открываемся "</string>
    <string name="in_code">" в "</string>
    <string name="hello_late">Доброй ночи</string>
    <string name="hello_early">Доброе утро</string>
    <string name="send_code_again">Выслать код повторно</string>
    <string name="send_code_again_after">"Выслать код повторно через "</string>
    <string name="event_order_paid">Заказ оплачен</string>
    <string name="ruble_sign">" ₽"</string>
    <string name="order_by_sum">"Заказ на сумму: "</string>
    <string name="your_order_is_going">ВАШ ЗАКАЗ ПРИНЯТ!</string>
    <string name="look_order">ПРОСМОТРЕТЬ ЗАКАЗ</string>
    <string name="ccall_courier">СВЯЗАТЬСЯ С КУРЬЕРОМ</string>
    <string name="congratulations">"Поздравляем, "</string>
    <string name="you_logged_in">\nВы зарегистрировались!</string>
    <string name="make_order">Сделать заказ</string>
    <string name="send">Отправить...</string>
    <string name="need_help">Нужна помощь?</string>
    <string name="current_price">"Текущая цена: "</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="lost_connection">ПОТЕРЯНА СВЯЗЬ С ИНТЕРНЕТОМ</string>
    <string name="search_network">ПОИСК СЕТИ</string>
    <string name="note_sent">Ваш отзыв отправлен</string>
    <string name="your_review">Ваша оценка заказа:</string>
    <string name="review_comment_hint">Какие у Вас пожелания?</string>
    <string name="send_upcase">ОТПРАВИТЬ</string>
    <string name="delivery_adapter_postfix">x</string>
    <string name="order_price_code">"Заказ на сумму: "</string>
    <string name="price_adapter">"На сумму: "</string>
    <string name="orders_on_the_way">Заказы в пути</string>
    <string name="completed_orders">Доставленные заказы</string>
    <string name="order_from">"Заказ от "</string>
    <string name="event_order_added">Товар добавлен</string>
    <string name="order">ЗАКАЗАТЬ</string>
    <string name="dish_end">БЛЮДО ЗАКОНЧИЛОСЬ</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="about_dish">О блюде</string>
    <string name="energy_value">Энергетическая ценность</string>
    <string name="event_product_added">Товар добавлен</string>
    <string name="order_more_code">ЗАКАЗАТЬ ЕЩЕ</string>
    <string name="final_page_description">Напитки / Десерты</string>
    <string name="final_page_title">дополни свой ланч!</string>
    <string name="view">ПОСМОТРЕТЬ</string>
    <string name="ingredient_postfix">г</string>
    <string name="order_upcase">ЗАКАЗАТЬ</string>
    <string name="select_card">ВЫБРАТЬ КАРТУ</string>
    <string name="select_address">Выберите адрес</string>
    <string name="delivery_address">АДРЕС ДОСТАВКИ</string>
    <string name="pay">ОПЛАТИТЬ</string>
    <string name="select_time">ВЫБРАТЬ ВРЕМЯ</string>
    <string name="now">СЕЙЧАС</string>
    <string name="help_delivery_time">Когда доставить?</string>
    <string name="location_continue">Да, я здесь</string>
    <string name="select_address_upcase">ВВЕСТИ АДРЕС</string>
    <string name="location_out_zone">Мы доставляем только внутри Садового Кольца</string>
    <string name="your_order_code">"ВАШ ЗАКАЗ НА "</string>
    <string name="select_delivery_place">Выберите адресс доставки</string>
    <string name="empty_order">Заказ пуст</string>
    <string name="card_not_selected">Карта не выбрана</string>
    <string name="free_delivery_from">Бесплатная доставка от 1000 руб.</string>
    <string name="free_delivery">Доставка бесплатна.</string>
    <string name="new_card">НОВАЯ КАРТА</string>
    <string name="orders_history">История заказов</string>
    <string name="start">НАЧАТЬ</string>
    <string name="profile">ПРОФИЛЬ</string>
    <string name="orders">ЗАКАЗЫ</string>
    <string name="help">ПОМОЩЬ</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="ok">OK</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="full_price">"Цена с доставкой: "</string>
    <string name="discount">"Скидка: "</string>
    <string name="bonuses">"Бонусы: "</string>
    <string name="final_price">"Итого: "</string>
    <string name="select_time_code">Выберите время</string>
    <string name="no_time_error">Нет доступного для заказа времени.</string>
    <string name="cancel_upcase">ОТМЕНА</string>
    <string name="select">ВЫБРАТЬ</string>
    <string name="loading_menu">Загружаем меню...</string>
    <string name="order_status_changed">Статус заказа изменен</string>
    <string name="default_notification_text">Просмотрите ваш заказ</string>
    <string name="make_preorder">СДЕЛАТЬ ПРЕДЗАКАЗ</string>
    <string name="code">КОД</string>
    <string name="verify_help_text">На Ваш телефон был отправлен код подтверждения, введите его, пожалуйста</string>
    <string name="your_cards">Ваши карты</string>
    <string name="select_upcase">ВЫБРАТЬ</string>
    <string name="orders_upcase_code">ЗАКАЗЫ</string>
    <string name="event_login">Вход в приложение</string>
    <string name="show_menu_code">ПОСМОТРЕТЬ МЕНЮ</string>
    <string name="event_auth">Пользовательская авторизация</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="nutritional_value">Ккал.</string>
    <string name="content">Состав</string>
    <string name="energy">Энергетическая ценность</string>
    <string name="additional_menu">Дополнительное меню</string>
    <string name="error">Ошибка</string>
    <string name="error_helper">Ошибка оплаты, попробуйте еще раз.</string>
    <string name="hello_day">Добрый день</string>
    <string name="wrong_code">Вы ввели неверный код</string>
    <string name="continue_to_start">ПРОДОЛЖИТЬ</string>
</resources>
