<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
             android:id="@+id/main"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/background"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <FrameLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/black_border"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/phone"
            android:inputType="phone"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:background="@null"
            android:hint="@string/phone_upcase" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/type_phone"
        android:id="@+id/textView8"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:textColor="#212121"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/next_upcase"
        android:id="@+id/next_btn"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#1e1e1e"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="42dp" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:id="@+id/imageView8"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/mini_logo"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/help_text"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="#212121"
        android:textSize="16sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center" />

</FrameLayout>