<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/background"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_marginTop="8dp"
        android:id="@+id/guillotine_hamburger"
        android:src="@drawable/ic_quit"
        android:padding="10dp"
        android:background="@drawable/white_circle_back"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/code_editText"
        android:layout_gravity="center"
        android:background="@drawable/black_border"
        android:hint="@string/code"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColorHint="#212121"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/verify_help_text"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:textColor="#212121"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/next_btn"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/black_border"
        android:layout_marginBottom="56dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="#212121"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:text="@string/next_upcase"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/mini_logo"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/resend_textView"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold" />
</FrameLayout>