<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView21"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_marginTop="8dp"
        android:id="@+id/guillotine_hamburger"
        android:src="@drawable/ic_quit"
        android:padding="10dp"
        android:background="@drawable/white_circle_back"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_gravity="center"
        android:background="@drawable/black_border"
        android:layout_marginBottom="16dp"
        android:text="a-akademiya@bk.ru"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="#212121"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:textColor="#212121"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/editText3fd"
        android:layout_gravity="center"
        android:background="@drawable/black_border"
        android:text="8-800-100-14-26"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColorHint="#212121"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#212121" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/need_help"
        android:id="@+id/textView8"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:textColor="#212121"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:id="@+id/imageView8"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/mini_logo"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/polz_str"
        android:id="@+id/textView56"
        android:layout_gravity="center"
        android:layout_marginTop="88dp"
        android:textColor="#212121"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rek_str"
        android:id="@+id/textView57"
        android:layout_gravity="center"
        android:textColor="#212121"
        android:textSize="16sp"
        android:layout_marginTop="120dp" />
</FrameLayout>