<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/background"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_height="36dp"
        android:layout_width="36dp"
        android:layout_marginTop="8dp"
        android:id="@+id/guillotine_hamburger"
        android:src="@drawable/ic_quit"
        android:padding="10dp"
        android:background="@drawable/white_circle_back"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/make_order"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/black_border"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:textColor="#212121"
        android:text="@string/order_upcase"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/next_btn"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/black_border"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:gravity="center"
        android:textColor="#212121"
        android:text="@string/select_card"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="62dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/mini_logo"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/price"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="120dp"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:id="@+id/checkmark"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="102dp"
        android:layout_marginStart="102dp"
        android:src="@drawable/ic_checkmark"
        android:visibility="gone"
        android:layout_marginBottom="72dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#212121"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="174dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#212121"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="150dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="188dp"
        android:layout_marginBottom="204dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/selected_location"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="118dp"
        android:textColor="#212121"
        android:textSize="16sp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="fill_horizontal"
        android:visibility="gone"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/other_string"
        android:id="@+id/select_another_address_btn"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="138dp"
        android:textColor="#212121"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/delivery_address"
        android:id="@+id/address_help_text"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="86dp"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/free_delivery"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="160dp"
        android:textSize="12sp"
        android:textColor="#212121" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/delivery_help"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="174dp"
        android:textColor="#212121"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:ems="10"
        android:id="@+id/map_btn"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/black_border"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:gravity="center"
        android:textColor="#212121"
        android:text="@string/select_address"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="76dp"
        android:visibility="visible" />

</FrameLayout>